更新環境變數設定，新增權限套餐功能，優化教師管理面板及學生助手頁面，並改善相關文檔與流程圖。

--- a/.env.litellm.example
+++ b/.env.litellm.example
@@ -17,7 +17,8 @@ UI_PASSWORD=
 LITELLM_SALT_KEY=
 
 # PostgreSQL 資料庫連線 URL
-DATABASE_URL=
+# 格式：postgresql://用戶名:密碼@主機:端口/資料庫名
+DATABASE_URL=postgresql://litellm_user:litellm_password@postgres:5432/litellm
 
 # 可選變數
 PORT=4000
